package StrategyInterfaceClass;

import StrategyInterface.QuackBehavior;


public class Squeak implements QuackBehavior {
    @Override
    public void quack() {
        System.out.println("实现吱吱叫");
    }
}
